# tts-api-provider

./: AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  config.h  configure.in  setup.py
conf/: Makefile.am  config.py
doc/: gen-doc.sh  tts-api-provider.texi
doc/figures/: README  architecture-future.eps  architecture-future.flw  architecture.eps  architecture.flw
src/: Makefile.am
src/api/python/: connection.py  tcp_connection.py  ttsapi.py
src/c/: Makefile.am
src/c/drivers/: Makefile.am  espeak.c  ttsapi.c
src/provider/: audio.py  configuration.py  daemon.py  driver.py  event.py  festival.py  logs.py  provider.py  sd_module.py  server.py  sleep.py
src/provider/drivers/: driver.py  festival.py  sd_module.py
src/provider/drivers/c/: Makefile  espeak.c  ttsapi.c  ttsapi.h
src/python/: Makefile.in  setup.py
src/python/clients/: __init__.py  ttsapi-say.py
src/python/drivers/: __init__.py  driver.py  festival.py
src/python/provider/: Makefile.am  __init__.py  audio.py  configuration.py  event.py  logs.py  provider.py  server.py
src/python/ttsapi/: _test2.py  _test3.py  client.py  connection.py  errors.py  server.py
src/ttsapi/: __init__.py  _tests.py  client.py  connection.py  errors.py  server.py  structures.py
