
dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)

AC_LANG(C)

dnl progs
AC_PROG_CC

dnl info
AM_INIT_AUTOMAKE("tts-api-provider", "`cat version.sh|grep '^VERSION'|awk -F= '{print $2}'`")

AM_CONFIG_HEADER(config.h)


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h sys/ioctl.h sys/time.h unistd.h)

AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL

# by Marcelo Magallon <mmagallo@efis.ucr.ac.cr>
# Turn around -rpath problem with libtool
# This define should be improbable enough to not conflict with anything
case ${host} in
  *-pc-linux-gnu)
    AC_MSG_RESULT([Fixing libtool for -rpath problems.])
    sed < libtool > libtool-2 \
    's/^hardcode_libdir_flag_spec.*$/hardcode_libdir_flag_spec=" -D__LIBTOOL_IS_A_FOOL__ "/'
    mv libtool-2 libtool
    chmod 755 libtool
  ;;
esac

AC_CHECK_LIB(glib-2.0,
        g_list_append, echo "",
        echo "*** Required Glib-2.0 library missing! See INSTALL .";exit 1)

AC_CHECK_LIB(pthread,
        pthread_create, echo "",
        echo "*** Required pthread library missing! See INSTALL .";exit 1)

AC_SUBST(SNDFILE_CFLAGS)
AC_SUBST(SNDFILE_LIBS)

glib_include=`pkg-config --cflags glib-2.0`
AC_SUBST(glib_include)
glib_libs=`pkg-config --libs glib-2.0`
AC_SUBST(glib_libs)
gthread_libs=`pkg-config --libs gthread-2.0`
AC_SUBST(gthread_libs)

AC_SUBST(datadir)

ttsapiconfdir='${sysconfdir}/tts-api-provider'
AC_SUBST(ttsapiconfdir)
driverbindir='${libdir}/tts-api-provider'
AC_SUBST(driverbindir)


AC_ARG_VAR(pidpath, Absolute path to a pid file)

dnl check for espeak support
AC_CHECK_LIB(espeak,
espeak_Initialize,
		espeak_ok="true"; echo "Compiling with espeak support.",
		espeak_ok="false"; echo "Espeak not found.",
         	-lpthread -lm)

AC_ARG_WITH(espeak, AS_HELP_STRING(--with-espeak, Compile with espeak support),
		 if test $withval = "no"; then 
		    echo "Forced compilation without espeak support."; 
		    espeak_ok="false";
		 else 
		    if test $espeak_ok = "false"; then
		       echo "Espeak support is not available. Sorry."; exit 1;
		    fi
                 fi
 		 echo "")

AM_CONDITIONAL(espeak_support, test $espeak_ok = "true")


AC_OUTPUT([Makefile conf/Makefile src/Makefile src/python/Makefile src/c/Makefile src/c/drivers/Makefile ])

